chandeliers-lus/tests/compile_fail/ui/tc/shadow.stderr
error: Type mismatch between the left and right sides: Base types should be identical: expected bool, got int
 --> tests/fail/ui/tc/shadow.rs:4:9
  |
4 |     let X = 0; tel
  |         ^^^^^
  |
note: This element has type bool
 --> tests/fail/ui/tc/shadow.rs:4:9
  |
4 |     let X = 0; tel
  |         ^
note: While this element has type int
 --> tests/fail/ui/tc/shadow.rs:4:13
  |
4 |     let X = 0; tel
  |             ^
